2005-05-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_list_button_released): Keep
	the popup posted if the button is released over the cellview.
	This matches the behaviour of other combo box implementations.  
	(#171378)

2005-05-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkscale.c (gtk_scale_class_init): Don't bind GDK_Page_Up 
	and GDK_Page_Down twice.  (#168333, Hazael Maldonado Torres)

2005-05-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c (cursor_blinks): Don't blink the cursor if 
	the entry is not editable.  (#304171,Nikos Kouremenos)

2005-05-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c (gtk_file_chooser_button_constructor): 
	Make sure the action of the button and the dialog are in sync,
	when the dialog is provided by the app.  (#303987, David A Knight)

2005-05-16  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkpango.c (gdk_pango_renderer_get_default): Fix a typo
	in the docs.  (#303940, Masao Mutoh)

2005-05-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktoggleaction.c (connect_proxy): Be more careful when
	casting.  (#304089, Philip Langdale)

	* gtk/gtkstatusbar.c (gtk_statusbar_size_allocate): Only shrink
	the label if we need to.  (#169390, Felix Riemann)

2005-05-10  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkproperty-win32.c (gdk_screen_get_setting): Check
	that GDK_IS_SCREEN(screen) (like the X11 backend does), not screen
	== gdk_screen_get_default(), as that might return NULL when this
	function is called.

2005-05-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkalignment.c (gtk_alignment_size_allocate): Flip the
	padding in RTL mode.  (#303572, Maciej Katafiasz)

2005-05-07  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkscreen-x11.c (gdk_screen_get_width_mm) 
	(gdk_screen_get_height_mm): Fix typos in the docs. (#303389,
	Masao Mutoh)

2005-05-06  Federico Mena Quintero  <federico@ximian.com>
