@@ -1,5 +1,8 @@
 2005-05-17  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktextview.c (cursor_blinks): Don't blink the cursor
+	if the text view is not editable.  
+
 	* gtk/gtkcombobox.c (gtk_combo_box_list_button_released): Keep
 	the popup posted if the button is released over the cellview.
 	This matches the behaviour of other combo box implementations.  
